Fix: bug where nav position sticky stopped working after previous double scroll bar fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,14 @@
 
 html {
     height: 100%;
-    width: 100%;
-    scroll-behavior: smooth;
     background-color: white;
+    overflow-x: hidden;
 }
 
 body {
+    scroll-behavior: smooth;
     overflow-y: scroll;
-    overflow-x: hidden;
     height: 100%;
-    width: 100%;
     font-family: raleway, sans-serif;
     margin: 0;
 }
